--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800" rel="stylesheet">
 	    <!-- Website Title -->
-    	<title>Newsom- Manage by the community</title>
-        <meta name="description" content="MemeCoin Newsom- Manage by the community" />
-        <meta property="og:title" content="MemeCoin Newsom" />
+    	<title>114514 - A number, now a unit.</title>
+        <meta name="description" content="114514- A number, now a unit." />
+        <meta property="og:title" content="114514" />
         <meta property="og:url" content="https://www.wlfmemecoin.com/" />
-        <meta property="og:description" content="MemeCoin Newsom" />
+        <meta property="og:description" content="114514" />
         <meta property="og:image" content="https://www.wlfmemecoin.com/images/section-1/coin.png" />
         <meta property="og:type" content="en_GB" />
         <meta property="og:locale" content="your value" />
@@ -89,11 +89,11 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6 mobile-center">
-                            <h1>Newsom   <span>Scum</span></h1>
+                            <h1>A number,    <span>now a unit.</span></h1>
                             <p class="lead">
-                                Manage by a wonderful community</p>
+                                Born in Japanese internet culture, 114514 evolved into a global meme ticker.</p>
                             <div class="hero-btns">
-                                <a href="https://app.uniswap.org/swap?outputCurrency=0xcomingsoon" class="btn">GET $SCUM TODAY</a>
+                                <a href="https://app.uniswap.org/swap?outputCurrency=0xcomingsoon" class="btn">GET $114514 TODAY</a>
                                 <a href="#token" class="btn btn3">Tokonomics</a>
                             </div>
                         </div>
@@ -111,13 +111,13 @@
                             <img src="images/banner.png" alt="about">
                         </div>
                         <div class="col-md-6 about-left">
-                             <h2 class="section-heading">About <span>$SCUM
+                             <h2 class="section-heading">About <span>$114514
                                 </span></h2>
                              <h4>Just a Memecoin Riding the Wave</h4>
-                             <p>No promises, no roadmap, just vibes. $SCUM is here to ride the narrative and have some fun along the way. </p>
+                             <p>No promises, no roadmap, just vibes. $114514 is here to ride the narrative and have some fun along the way. </p>
                             
-                             <a class="btn" target="_blank" href="https://x.com/WLFI_MemeCoin/"><i class="fab fa-x">X</i></a>
-                             <a class="btn" target="_blank" href="https://t.me/WLFI_MemeCoin"><i class="fab fa-telegram"></i></a>
+                             <a class="btn" target="_blank" href="https://x.com/eth_114514"><i class="fab fa-x">X</i></a>
+                             <a class="btn" target="_blank" href="https://t.me/eth_114514"><i class="fab fa-telegram"></i></a>
                              <a class="btn" target="_blank" href="https://etherscan.io/token/0xcomingsoon"><i class="fab fa-ethereum"></i></a>
                              <a class="btn" target="_blank" href="https://dexscreener.com/ethereum/0xcomingsoon"><i class="fas fa-chart-line"></i></a>
 
@@ -141,10 +141,10 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="benefit-box text-center" style="height: 100%;">
                         <div class>
-                            <h5 class="section-heading" >420,690,000,000</h5>
+                            <h5 class="section-heading" >1,000,000,000</h5>
                         </div>
                         <div class="text">
-                            <h4>Max Total Supply</h4>
+                            <h4>Total Supply</h4>
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
             <!-- Buy Start -->
             <div class=currency-calculator p-tb id="buy">
                 <div class="container">
-                    <div class="text-center"><h2 class="section-heading">How To Buy <span>$SCUM</span>?</h2></div>
+                    <div class="text-center"><h2 class="section-heading">How To Buy <span>$114514</span>?</h2></div>
                     
                     <div class="row">
                         <iframe src="https://app.uniswap.org/swap?outputCurrency=0xcomingsoon" height="660px" width="100%" style="
@@ -202,8 +202,8 @@
                                         <a href="#" title=""><img src="images/section-1/coin.png" style="height: 50%; width: 50%;"></a>
                                     </div>
                                     <div class="text">
-                                        <p class="lead">$SCUM is Just a Memecoin Riding the Wave
-                                            No promises, no roadmap, just vibes. $SCUM is here to ride the narrative and have some fun along the way.</p>
+                                        <p class="lead">$114514 is Just a Memecoin Riding the Wave
+                                            No promises, no roadmap, just vibes. $114514 is here to ride the narrative and have some fun along the way.</p>
                                     </div>
                                 </div>
                             </div>
@@ -214,7 +214,7 @@
                                         <li class="active"><a href="#top">Home</a></li>
                                         <li><a href="#about">About</a></li>
                                         <li><a href="#token">Tokonomics</a></li>
-                                        <li><a href="#buy">Buy $SCUM</a></li>
+                                        <li><a href="#buy">Buy $114514</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -227,7 +227,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="copy-text">© 2025 Scum MemeCoin
+                            <div class="copy-text">© 2026 114514
                                  </div>
                         </div>
                         <div class="col-md-6">
@@ -235,8 +235,8 @@
                                 <div class="widget widget-html text-center">
                                     <div class="socials">
                                         <ul>
-                                            <li>  <a  target="_blank" href="https://x.com/WLFI_MemeCoin/">X</a></li>
-                                            <li><a  target="_blank" href="https://t.me/WLFI_MemeCoin"><i class="fab fa-telegram"></i></a></li>
+                                            <li>  <a  target="_blank" href="https://x.com/eth_114514">X</a></li>
+                                            <li><a  target="_blank" href="https://t.me/eth_114514"><i class="fab fa-telegram"></i></a></li>
                                             <li> <a  target="_blank" href="https://etherscan.io/token/0xcomingsoon"><i class="fab fa-ethereum"></i></a></li>
                                             <li> <a target="_blank" href="https://dexscreener.com/ethereum/0xcomingsoon"><i class="fas fa-chart-line"></i></a></li>
                                         </ul>
